--- a/border_radius.css
+++ b/border_radius.css
@@ -1,43 +1,47 @@
-body {
-    background-color: lavender;
-}
-
-div {
-    padding: 40px;
-    display: flex;
-    justify-content: center;
-}
-
-span {
-    background-color: deepskyblue;
-}
-
-#tfoot {
-    border-radius: 20px;
-    background-color: deepskyblue;
-}
-
-table {
-    background-color: antiquewhite;
-    border: solid 1px black;
-    border-radius: 20px;
-}
-
-td {
-    padding: 8px;
-    text-align: center;
-}
-
-tbody tr:first-child td,
-td {
-    border: none;
-}
-
-tbody tr td {
-    border: 1px solid black;
-    border-radius: 1px;
-}
-
-tr#uno td {
-    border-top: none;
-}
+    body {
+        background-color: lavender;
+    }
+    
+    div {
+        padding: 40px;
+    }
+    
+    span {
+        background-color: deepskyblue;
+        font-weight: bold;
+    }
+    
+    #tfoot {
+        background-color: deepskyblue;
+        font-weight: bold;
+    }
+    
+    table {
+        background-color: antiquewhite;
+        border: solid 5px black;
+        border-top-left-radius: 50px;
+        border-top-right-radius: 50px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    
+    td {
+        padding: 10px;
+        text-align: center;
+    }
+    
+    tbody tr:first-child td {
+        border: none;
+        font-weight: bold;
+    }
+    
+    tbody tr td {
+        border: 1px solid black;
+        border-radius: 1px;
+        border-right: none;
+        border-bottom: none;
+    }
+    
+    tr#uno td {
+        border-top: none;
+    }
